tests/baselines/reference/objectLiteralWithSemicolons3.errors.txt
tests/cases/compiler/objectLiteralWithSemicolons3.ts(2,3): error TS2304: Cannot find name 'a'.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(2,4): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(3,3): error TS2304: Cannot find name 'b'.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(3,4): error TS1005: ',' expected.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(4,3): error TS2304: Cannot find name 'c'.
tests/cases/compiler/objectLiteralWithSemicolons3.ts(4,4): error TS1005: ',' expected.


==== tests/cases/compiler/objectLiteralWithSemicolons3.ts (6 errors) ====
    var v = {
      a;
      ~
!!! error TS2304: Cannot find name 'a'.
       ~
!!! error TS1005: ',' expected.
      b;
      ~
!!! error TS2304: Cannot find name 'b'.
       ~
!!! error TS1005: ',' expected.
      c;
      ~
!!! error TS2304: Cannot find name 'c'.
       ~
!!! error TS1005: ',' expected.
    }